--- a/.gitignore
+++ b/.gitignore
@@ -149,4 +149,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 testScripts/*
-.DS_Store/*
+.DS_Store
+*/*.csv
